# IOT-Exercise-Tracker

./: .gitignore  readme.md
firmware/: CMakeLists.txt  prj.conf
firmware/src/: coap_client_utils.c  coap_client_utils.h  main.c
firmware/src/tflite/: main_functions.cc  main_functions.h  model_data.cc
train/: cloudml_train.py  data_prepare.py  edgeml_train.py  model.cc  model.tflite  model_quantized.tflite
train/data/cloud/: test  train  valid
train/data/edge/: test  train  valid
train/eda/: capture.py  plot.py
